# Algo_and_DS

./: CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
Part1/: 1005.cpp  1296.cpp  1401.cpp  2025.cpp  P3212_AAnishchenko_1005.cpp  P3212_AAnishchenko_1155.cpp  P3212_AAnishchenko_1401.cpp  README.md
Part1/docs/: P3212_ААнищенко_1005.docx  P3212_ААнищенко_1296.docx
Part2/: 1207.cpp  1322.cpp  1444.cpp  1604.cpp  1726.cpp  P3212_AAnishchenko_1207.cpp  P3212_AAnishchenko_1322.cpp  P3212_AAnishchenko_1444.cpp  P3212_AAnishchenko_1604.cpp  P3212_AAnishchenko_1726.cpp  README.md
Part2/docs/: P3212_ААнищенко_1207.docx  P3212_ААнищенко_1322.docx  P3212_ААнищенко_1444.docx  P3212_ААнищенко_1604.docx  P3212_ААнищенко_1726.docx  P3212_ААнищенко_II.docx
Part3/: P3212_AAnischenko_1067.cpp  P3212_AAnischenko_1494.cpp  P3212_AAnischenko_1521.cpp  P3212_AAnischenko_1628.cpp  P3212_AAnischenko_1650.cpp  README.md
Part3/docs/: P3212_ААнищенко_1067.docx  P3212_ААнищенко_1494.docx  P3212_ААнищенко_1521.docx  P3212_ААнищенко_1628.docx  P3212_ААнищенко_1650.docx  P3212_ААнищенко_III.docx
Part4/: P3212_AAnischenko_1080.cpp  P3212_AAnischenko_1160.cpp  P3212_AAnischenko_1162.cpp  P3212_AAnischenko_1450.cpp  P3212_AAnischenko_1806.cpp
Part4/docs/: P3212_ААнищенко_1080.docx  P3212_ААнищенко_1160.docx  P3212_ААнищенко_1162.docx  P3212_ААнищенко_1450.docx  P3212_ААнищенко_1806.docx  P3212_ААнищенко_IV.docx
